[package]
name = "humanize"
version = "0.1.0"
edition = "2024"

[features]
default = ["duration", "bytes", "serde"]

bytes = []
duration = []

[[bench]]
name = "duration"
harness = false
path = "benches/duration.rs"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
