[package]
name = "humanize"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["duration", "bytes", "serde"]

bytes = []
duration = []

[[bench]]
name = "duration"
harness = false
path = "benches/duration.rs"

[[bench]]
name = "bytes"
harness = false
path = "benches/bytes.rs"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
