[package]
name = "humanize"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[features]
default = ["duration", "bytes"]
serde = ["dep:serde_core"]

bytes = []
duration = []

[[bench]]
name = "duration"
harness = false
path = "benches/duration.rs"

[[bench]]
name = "bytes"
harness = false
path = "benches/bytes.rs"

[dev-dependencies]
criterion = { version = "0.7", default-features = false }

[dependencies]
serde_core = { version = "1.0", optional = true, default-features = false }
